ver 2 1. Cái chổ tên quay số minh show dạng code - name. VD : 001 - Leo Leong 2. Flow đang là 2 screen mình bỏ screen đầu đi chỉ cần screen quay số thôi ( bỏ nhớ backup dùm a) 3. Khi quay ra người trúng giả có cái vòng xoay trắng quaynh tên người thăng giải mình hide nó đi giúp a 4. Tăng tg quay số thêm tầm 15s cái này như a note ở trên mình tăng cái MAX_REEL_ITEMS lên thử xem hiện tại có 40 ahh tăng lên tầm gấp đôi đi rôi check lại time

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "webpack serve --open --config webpack/webpack.dev.conf.js",
     "first-release": "npx standard-version --commit-all --tag-prefix v --release-as 1.0.0 --infile CHANGELOG.md",
     "release": "npx standard-version --commit-all --tag-prefix v --infile CHANGELOG.md",
-    "extract-latest-change-log": "node scripts/extractLatestChangeLog.js"
+    "extract-latest-change-log": "node scripts/extractLatestChangeLog.js",
+    "clean-dist": "rimraf dist",
+    "clean-nm": "rimraf node_modules"
   },
   "author": "Ice Lam",
   "license": "ISC",
